correction alignement a gauche du formulaire qui n'etait pas normal

--- a/scss/style1/_custom_variables.scss
+++ b/scss/style1/_custom_variables.scss
@@ -19,8 +19,6 @@ $theme-colors: (
   "olfp" : violet
 );
 
-$grid-breakpoints: (
-        xxl: 1600px
-) ;
+
 
 
